:showtitle:
:toc: left
:icons: font
:toclevels: 1

= Typify Changelog

// WARNING: This file is modified programmatically by `cargo release` as
// configured in release.toml.  DO NOT change the format of the headers or the
// list of raw commits.

// cargo-release: next header goes here (do not change this line)

== Unreleased changes (release date TBD)

https://github.com/oxidecomputer/typify/compare/v0.0.8\...HEAD[Full list of commits]

* Switched from `unicode-xid` to `unicode-ident` (#60)

== 0.0.8 (released 2022-05-22)

https://github.com/oxidecomputer/typify/compare/v0.0.7\...v0.0.8[Full list of commits]

* Support for integer schemas with `enum_values` populated (breaking change) (#57)
* Deeper inspection of `oneOf` constructions to make better `enum`s (#59)
* Simple handling for "constraint" `allOf` constructions (#59)
* Improved handling of non-required unit struct members (#59)

== 0.0.7 (released 2022-05-18)

https://github.com/oxidecomputer/typify/compare/v0.0.6\...v0.0.7[Full list of commits]

* Update to `uuid` v1.0.0 for testing (non-breaking change)

== 0.0.6 (released 2022-05-12)

https://github.com/oxidecomputer/typify/compare/v0.0.5\...v0.0.6[Full list of commits]

* Add an interface to allow consumers to specify additional derives for generated types (#35)
* Handle all invalid identifier characters (#37)
* Add support for `std::net::Ipv6Addr` type (#38)
* Add `Copy` to simple enums (#40)
* `Box` trivial cyclic refs (#41)
* Move to heck for case conversion (#43)
* Improve handling of default values for object properties (#44)

== 0.0.5 (released 2021-11-06)

https://github.com/oxidecomputer/typify/compare/v0.0.4\...v0.0.5[Full list of commits]

* use include_str! so that our macro is re-run if the given file changes (#27)
* Better handling of enums that look like the Result type (#26)
* Pass through name for make_map (#25)


== 0.0.4 (released 2021-11-06)

First published version